--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <div class="statistics__row row"></div>
         <div class="row__item">
             <img src="./img/Vector (111).svg" alt="">
+            <div class="row__tittle"></div>
+            <div class="row__text"></div>
         </div>
         
     </main>
